# optrace

./: .buildinfo  .coverage.tp510ua.257633.XoioFrCx  .coverage.tp510ua.258388.XQeCbKJx  .gitignore  404.html  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ReadMe.md  examples.html  genindex.html  impressum.html  index.html  installation.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.py  sitemap.xml  temp.zmx  tox.ini  tox.toml
.doctrees/: examples.doctree  index.doctree  overview.doctree  quickstart.doctree
.doctrees/development/: documentation.doctree  packaging.doctree  testing.doctree
.doctrees/math/: autofocus.doctree  color.doctree  geometry.doctree  math.doctree  matrix_analysis.doctree  spectrum.doctree  tracing.doctree
.doctrees/usage/: elements.doctree  focus.doctree  image.doctree  plots.doctree  spectrum.doctree  surfaces.doctree  tma.doctree  ui.doctree
.github/workflows/: doc_gen.yml  doc_test.yml  gen_docs.yml  install_test.yml  os_comp.yml  os_tests.yml  pyver_comp.yml  release.yml  tox_test.yml  website_test.yml
_sources/: examples.rst.txt  impressum.rst.txt  index.rst.txt  installation.rst.txt  overview.rst.txt  quickstart.rst.txt
_sources/details/: color.rst.txt  convolution.rst.txt  focus.rst.txt  image_spectrum.rst.txt  index.rst.txt  matrix_analysis.rst.txt  misc.rst.txt  sampling.rst.txt  tracing.rst.txt
_sources/development/: changelog.rst.txt  development.rst.txt  documentation.rst.txt  future_features.rst.txt  notes.rst.txt  packaging.rst.txt  testing.rst.txt
_sources/math/: color.rst.txt  convolution.rst.txt  geometry.rst.txt  math.rst.txt  matrix_analysis.rst.txt  sampling.rst.txt  tracing.rst.txt
_sources/reference/: optrace.rst.txt  optrace_gui.rst.txt  optrace_plots.rst.txt  optrace_tracer_geometry_surface.rst.txt  optrace_tracer_image.rst.txt  optrace_tracer_presets.rst.txt
_sources/usage/: advanced.rst.txt  convolve.rst.txt  elements.rst.txt  focus.rst.txt  group.rst.txt  gui.rst.txt  gui_automation.rst.txt  image.rst.txt  index.rst.txt  overview.rst.txt  plots.rst.txt  raytracer.rst.txt  refraction_index.rst.txt  spectrum.rst.txt  surfaces.rst.txt  tma.rst.txt  ui.rst.txt
_static/: pygments.css
_static/css/: custom.css
details/: color.html  convolution.html  focus.html  hurb.html  image_spectrum.html  index.html  matrix_analysis.html  misc.html  sampling.html  tracing.html
development/: changelog.html  development.html  documentation.html  future_features.html  guidelines.html  index.html  notes.html  packaging.html  testing.html
docs/: Makefile  generate_bib_structure.sh  generate_changelog.sh  generate_deps.sh  generate_image_header.sh  generate_versions.sh
docs/source/: API.rst  Changelog.rst  Development.rst  Extending.rst  Testing.rst  autofocus.rst  backend.rst  basic_scripting.rst  bib.bib  bib_structure.txt  bib_versions.rst  bib_versions.txt  bibliography.rst  changelog.txt  color.rst  conf.py  dependencies.rst  documentation.rst  examples.rst  frontend.rst  geometry.rst  impressum.rst  index.rst  installation.rst  library_structure.rst  math.rst  matrix_analysis.rst  optrace_gui.rst  optrace_plots.rst  optrace_tracer.rst  optrace_tracer_geometry.rst  optrace_tracer_geometry_surface.rst  optrace_tracer_presets.rst  optrace_tracer_spectrum.rst  (+20 more)
doctrees/: installation.doctree
examples/: Arizona_Eye_Model.py  Arizona_Eye_Model_Imaging.py  Double_Prism.py  Double_Prism_Example.py  IOL_pinhole_imaging.py  IOL_target_imaging.py  Image_RGB.py  Image_RGB_Example.py  Image_RGB_Render.py  Image_RGB_Render_Example.py  More_Complex_Example.py  Plot_Presets.py  RefractionIndex_Presets.py  Spectrum_Presets.py  achromat.py  arizona_eye_model.py  arizona_eye_model_imaging.py  astigmatism.py  brewster_polarizer.py  cosine_surfaces.py  custom_surfaces.py  double_gauss.py  double_prism.py  gui_automation.py  hurb_apertures.py  hurb_pinhole.py  image_render.py  image_render_many_rays.py  image_rgb.py  image_rgb_render.py  keratoconus.py  legrand_eye_model.py  microscope.py  more_complex_example.py  prism.py  psf_imaging.py  quickstart.py  refraction_index_presets.py  spectrum_presets.py  sphere_projections.py  (+2 more)
html/: .buildinfo  examples.html  genindex.html  index.html  installation.html  objects.inv  overview.html  py-modindex.html  quickstart.html  search.html  searchindex.js
math/: autofocus.html  color.html  convolution.html  geometry.html  math.html  matrix_analysis.html  sampling.html  spectrum.html  tracing.html
optrace/: __init__.py  __metadata__.py  global_options.py  metadata.py  progress_bar.py  property_checker.py  warnings.py
reference/: index.html  optrace.html  optrace_gui.html  optrace_plots.html  optrace_tracer.html  optrace_tracer_color.html  optrace_tracer_geometry.html  optrace_tracer_geometry_surface.html  optrace_tracer_image.html  optrace_tracer_presets.html  optrace_tracer_spectrum.html  structure.html
src/: Altmeyer_Linse_Medium.py  Double_Prism_Example.py  Image_RGB_Example.py  Image_RGB_Render_Example.py  Interaction_Example.py  More_Complex_Example.py
tests/: RGB_Fit.py  _test_all.py  audit_connections.js  benchmark.py  hurb_geometry.py  rgb_lines.py  rt_example.py  speed.py  strat_sampling_comparision.py  telescope.py  testAll.py  testBackendModules.py  testExamples.py  testFrontend.py  testPlots.py  testTCPServer.py  test_backend_modules.py  test_color.py  test_connections.sh  test_convolve.py  test_examples.py  test_frontend.py  test_geometry.py  test_gui.py  test_image.py  test_load.py  test_misc.py  test_plots.py  test_presets.py  test_r_image.py  test_refraction_index.py  test_scope.py  test_spectrum.py  test_surface.py  test_tma.py  test_trace_misc.py  test_trace_modules.py  test_tracer.py  test_tracer_hurb.py  test_tracer_special.py  (+2 more)
usage/: advanced.html  convolve.html  elements.html  focus.html  geometry.html  group.html  gui.html  gui_automation.html  image.html  index.html  overview.html  plots.html  raytracer.html  refraction_index.html  spectrum.html  surfaces.html  tma.html  ui.html  usage.html
(+355 files in other folders)
