
[project]
name = "optrace"
dynamic = ["version"]
authors = [{name = "Damian Mendroch", email =  "damian.mendroch@th-koeln.de"}]
maintainers = [{name = "Damian Mendroch", email = "damian.mendroch@th-koeln.de"}]
description = "An optics simulation package with sequential raytracing, image rendering and a GUI frontend" 
keywords = ["simulation", "optics", "raytracing"]
readme = "ReadMe.md"
license = {text = "MIT License"}
requires-python = ">=3.11,<3.14"
dependencies = ["numpy>2", "chardet", "scipy", "opencv-python-headless", "pyqtdarktheme-fork", "pyside6", 
"matplotlib", "tqdm", "mayavi @ git+https://github.com/drocheam/mayavi.git@merged-fixes", "vtk < 9.5"] 
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python ::  3.11",
    "Programming Language :: Python ::  3.12",
    "Programming Language :: Python ::  3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries"
]

[project.urls]
Homepage = "https://drocheam.github.io/optrace"
Repository = "https://www.github.com/drocheam/optrace"
Documentation = "https://drocheam.github.io/optrace"
Changelog = "https://drocheam.github.io/optrace/development/changelog.html"

[project.optional-dependencies]
tests = ["pyautogui", "pytest", "coverage", "colour-science", "pytest-timeout", "pytest-random-order", "pytest-xvfb"]
docs = ["sphinx", "sphinxcontrib-bibtex", "shibuya", "sphinx-sitemap", "sphinx-mathjax-offline", "sphinx-notfound-page"]

[build-system]
requires = ["setuptools >= 61.0", "numpy>2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages.find.include =  ["optrace*"]
include-package-data = false
dynamic = {version = {attr = "optrace.metadata.version"}}
package-data = {optrace = ["resources/*", "resources/images/*"]}  

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 360
timeout_method = "thread"
filterwarnings = ["ignore::UserWarning"]
addopts = "--random-order"
markers = [
    "slow: tests slower than 10 seconds on my machine",
    "os: marks test relevant for testing of different operating systems",
    "install: marks package installation tests. Should include tests and docs dependencies.",
    "gui1: only first batch of GUI tests (separated for lower RAM usage)",
    "gui2: only second batch of GUI tests (separated for lower RAM usage)",
    "gui3: only third batch of GUI tests (separated for lower RAM usage)"
]

[tool.gh_actions]
python = { "3.11" = "py311", "3.12" = "py312", "3.13" = "py313" }
